<resources>
    <string name="app_name">Sicurezza</string>
    <string name="btnSignIn">SIGN IN</string>
    <string name="btnMasuk">Masuk</string>
    <string name="divKeamanan">DIVISI KEAMANAN</string>
    <string name="timeline">Anda Nyaman Karena Kami Amankan</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="nav_tankko">Tankko</string>
    <string name="nav_rank">Rank</string>
    <string name="nav_point">Resident</string>
    <string name="welcome">WELCOME TO THE SICUREZZA</string>

    <string name="texttankko">Texnya panjang bangat jangan ditulis disini yaa bos jangan ditiru deh yaa om karena panjang banagt sumpah cape baca juga</string>
    <string name="number">2</string>

    <string name="resident">Rasyid Ridho Namanya</string>
    <string name="usroh">Ali Bin Abi Thalib</string>
    <string name="noKamar">U 329 A</string>
    <string name="TankkoTitle">Teng-Ko</string>
    <string name="RankTitle">The Most Valuable Resident</string>
    <string name="PointTitle">Tambah Point</string>

    <string name="ListPelanggaran">LIST PELANGGARAN</string>
    <string name="Tanggal">29 September 2019</string>
    <string name="Pelanggarn">Tidak Kultum</string>

    <item name="click" type="id" />
    <string name="optional">Kapan, Dimana, Kenapa. (Optional)</string>
    <string name="next">Next</string>
    <string name="get_started">Mulai</string>
    <string name="skip">Skip</string>
    <string name="nama">Nama</string>
    <string name="passcode_hint">PASSCODE(4 DIGITS)</string>
    <string name="simpan">Simpan</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="konfirmasi_password">KONFIRMASI PASSWORD</string>
    <string name="re_password">Re-Password</string>
    <string name="type_0000_to_remove">TYPE 0000 TO REMOVE</string>
    <string name="theme_selector">Choose Theme</string>
</resources>
