<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorMuh1">

        <TextView
            android:id="@+id/tv_DetailPoinpoin"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/number"
            android:textAlignment="center"
            android:textColor="@color/whiteColors"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="301dp"
            android:layout_height="64dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_DetailPoinpoin"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_DetailPoinpenjelasan"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/Pelanggarn"
                android:textColor="@color/whiteColors"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_DetailPointanggal"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/Tanggal"
                android:textColor="@color/whiteColors" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>