<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    tools:context="id.ac.umy.unires.sicurezza.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold"
                tools:text="Wiliam Snoe" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:gravity="center"
            android:layout_marginTop="55dp"
            android:textColor="@color/whiteColors"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="0.4"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/whiteColors"/>

                <EditText
                    android:id="@+id/et_epNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/nama"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:textColor="@color/whiteColors"
                    android:textColorHint="@color/whiteTransparan"
                    android:backgroundTint="@color/whiteColors"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_key"/>

                <EditText
                    android:id="@+id/et_epPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/password"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:textColor="@color/whiteColors"
                    android:textColorHint="@color/whiteTransparan"
                    android:backgroundTint="@color/whiteColors"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_passcode"/>

                <EditText
                    android:id="@+id/et_epPasscode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/passcode_hint"
                    android:maxLength="4"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:inputType="numberPassword"
                    android:textColor="@color/whiteColors"
                    android:textColorHint="@color/whiteTransparan"
                    android:backgroundTint="@color/whiteColors"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konfirmasi_password"
                android:gravity="center"
                android:textColor="@color/whiteColors"
                android:textStyle="bold"
                android:layout_marginTop="70dp"/>

            <EditText
                android:id="@+id/et_confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/password"
                android:paddingStart="25dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColor="@color/whiteColors"
                android:textColorHint="@color/whiteTransparan"
                android:backgroundTint="@color/whiteColors"/>

            <EditText
                android:id="@+id/et_reconfirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/re_password"
                android:paddingStart="25dp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColor="@color/whiteColors"
                android:textColorHint="@color/whiteTransparan"
                android:backgroundTint="@color/whiteColors"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_edit_profile"
                android:text="@string/simpan"
                android:textColor="@color/basicApps" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>